fix .table .th z-index to cover .badge

--- a/src/components/unstyled/table.css
+++ b/src/components/unstyled/table.css
@@ -1,7 +1,7 @@
 .table {
   @apply relative;
   th:first-child {
-    @apply sticky left-0 z-10;
+    @apply sticky left-0 z-[11];
     /* because safari */
     position: -webkit-sticky;
   }
